# slambook2

./: .gitignore
ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt
ch12/dense_mono/app/: dense_mapping.cpp
ch12/dense_mono/include/: depth_predictor.h
ch12/dense_mono/include/util/: image_processor.h  plotter.h  reader.h
ch12/dense_mono/src/: depth_predictor.cc
ch12/dense_mono/src/util/: plotter.cc  reader.cc
ch8/: direct_method.cpp
